--- a/package.xml
+++ b/package.xml
@@ -3,8 +3,8 @@
 	<packageinformation>
 		<packagename>Promise Wrap</packagename>
 		<isapplication>0</isapplication>
-		<version>1.0.0 RC 1</version>
-		<date>2016-12-18</date>
+		<version>1.0.0</version>
+		<date>2017-11-08</date>
 		<license><![CDATA[MIT License <https://opensource.org/licenses/MIT>]]></license>
 	</packageinformation>
 	
@@ -14,7 +14,7 @@
 	</authorinformation>
 	
 	<requiredpackages>
-		<requiredpackage minversion="3.0.0 RC 1">com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="3.0.10">com.woltlab.wcf</requiredpackage>
 		<requiredpackage minversion="2.4.1">be.bastelstu.core-js</requiredpackage>
 	</requiredpackages>
 	
@@ -24,6 +24,10 @@
 	</compatibility>
 	
 	<instructions type="install">
+		<instruction type="file" application="wcf">files_wcf.tar</instruction>
+	</instructions>
+
+	<instructions type="update" fromversion="1.0.0 RC 1">
 		<instruction type="file" application="wcf">files_wcf.tar</instruction>
 	</instructions>
 </package>
