--- a/package.xml
+++ b/package.xml
@@ -3,8 +3,8 @@
 	<packageinformation>
 		<packagename>Promise Wrap</packagename>
 		<isapplication>0</isapplication>
-		<version>1.1.0</version>
-		<date>2017-11-08</date>
+		<version>1.1.1</version>
+		<date>2020-10-20</date>
 		<license><![CDATA[MIT License <https://opensource.org/licenses/MIT>]]></license>
 	</packageinformation>
 	
@@ -22,6 +22,10 @@
 	</excludedpackages>
 	
 	<instructions type="install">
+		<instruction type="file" application="wcf">files_wcf.tar</instruction>
+	</instructions>
+
+	<instructions type="update" fromversion="1.1.0">
 		<instruction type="file" application="wcf">files_wcf.tar</instruction>
 	</instructions>
 
